<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_content_cut"
        android:title="@string/cut"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/undo"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/clear"
        android:orderInCategory="6"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_change_color"
        android:icon="@drawable/ic_palette"
        android:title="@string/line_color"
        android:orderInCategory="15"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_toggle_grid"
        android:checkable="true"
        android:checked="true"
        android:title="@string/toggle_grid"
        android:orderInCategory="25"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_line_thickness"
        android:orderInCategory="50"
        android:title="@string/action_line_thickness"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid_size"
        android:orderInCategory="70"
        android:title="@string/action_grid_size"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="80"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_background_color"
        android:orderInCategory="90"
        android:title="@string/action_background_color"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="400"
        android:title="@string/action_help"
        android:onClick="sendHelp"
        app:showAsAction="never" />

    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /-->
</menu>
