<resources>

    <string name="app_name">String Art</string>
    <string name="label">String Art</string>
    <string name="clear_question">"Do you really want to clear all the lines and points?"</string>
    <string name="apply_to_all_lines">"Apply to New Lines or all Current Lines?"</string>
    <string name="cleared">The lines have been cleared.</string>
    <string name="close">Press back again to close this app.</string>
    <string name="cut">Cut</string>
    <string name="line_color">Line Color</string>
    <string name="clear">Clear</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="new_new">New</string>
    <string name="all">All</string>
    <string name="toggle_grid">Grid Lines</string>
    <string name="action_line_thickness">Line Thickness</string>
    <string name="action_grid_size">Grid Spacing</string>
    <string name="action_share">Share</string>
    <string name="action_background_color">Background Color</string>
    <string name="action_help">Help</string>
    <string name="color_dialog_title">Select a color</string>


    <!-- Toast Dialog Strings -->
    <string name="no_points_left_to_undo">No point left to undo.</string>

    <string name="line_size">Line Thickness</string>

    <string name="grid_spacing">Grid Spacing</string>

    <string name="color_set">Color set to </string>
    <string name="share_name_prefix">StringArt_Image</string>

    <!-- Help Menu Strings -->
    <string name="help_title">How to use StringArt</string>
    <string name="help_txt"><![CDATA[
<p><p><br><br><strong>The basics:</strong></p>
<p>Touching anywhere on the grid will create a point.</p>
<p>Touching again will create another point, that is connected to the first point with a line.</p>
<p>All points are connected to each other.</p>
<p>A swipe will create a point for each area of the grid touched.</p>
<p><strong>The options are:</strong></p>
<p><strong>Undo</strong> <br />Undo the last created point and lines. This can be repeated.</p>
<p><strong>Cut</strong> <br />Remove a point and it\'s associated lines.</p>
<p><strong>Clear</strong> <br />Remove all lines and points.</p>
<p><strong>Line Color</strong> <br />Change the color of all the lines, or change the color of the new lines that are going to be created.</p>
<p><strong>Grid Lines</strong><br />Remove the gridlines from the background.</p>
<p><strong>Line Thickness</strong><br />Change how thick the existing lines are, or how thick the new lines that are going to be created will be.</p>
<p><strong>Grid Spacing</strong><br />Change how close or wide the grid spacing will be in pixels.</p>
<p><strong>Share</strong><br />Share the image with friends, or save it.</p>
<p><strong>Background Color</strong><br />Change the color of the current background.</p>
<p><br /><strong>Notes</strong></p>
<p>This application can be used in portrait or landscape mode.</p>
<p>Image data will be saved, for next time the application is loaded. To start over use Clear.</p>]]></string>

</resources>
